agg Empresas internacionales

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <button class="tab-button" onclick="openTab('inicio')">Inicio</button>
         <button class="tab-button" onclick="openTab('empresas')">Empresas</button>
         <button class="tab-button" onclick="openTab('emprendedores')">Emprendedores</button>
+        <button class="tab-button" onclick="openTab('empresas-internacionales')">Empresas Internacionales</button>
     </header>
     <div id="inicio" class="tab-content">
         <h2>Página de inicio</h2>
@@ -26,7 +27,10 @@
             <!-- Aquí se añadirán los elementos de la lista mediante JavaScript -->
         </ol>
     </div>
+    <div id="empresas-internacionales" class="tab-content" style="display: none;">
+        <h2>Página de empresas internacionales</h2>
+        <p>Contenido de la página de empresas internacionales...</p>
+    </div>
     <script src="js.js"></script>
 </body>
-</html>
 </html>
