agg info a empresas nacionales

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     </div>
     <div id="empresas" class="tab-content" style="display: none;">
         <h2>Página de empresas</h2>
-        <p>Contenido de la página de empresas...</p>
+        <ul>
+            <li><strong>S&H SUPPORT:</strong> Es una consultora que brinda sus servicios de Outsourcing y Consultoría en el Área de Tecnología de la Informática.</li>
+            <li><strong>ALGIITECH, S.A. DE C.V.:</strong> También conocida como DiiMO, es la primera app en El Salvador que brinda micro préstamos.</li>
+            <li><strong>GRUPO BORTEX S.A. DE C.V.:</strong> Cuenta con experiencia en el ramo de la tecnología, con venta de equipo Hardware y Software Informáticos.</li>
+            <li><strong>INFILE S.A. DE C.V.:</strong> Es una importante empresa de servicios tecnológicos para facilitar la gestión de altos volúmenes de información.</li>
+            <li><strong>IT Profis El Salvador:</strong> Brinda los servicios de desarrollo de software y servicio de Outsourcing.</li>
+        </ul>
     </div>
     <div id="emprendedores" class="tab-content" style="display: none;">
         <h2>Página de emprendedores</h2>
