--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     <div id="empresas-internacionales" class="tab-content" style="display: none;">
         <h2>Página de empresas internacionales</h2>
         <p>Contenido de la página de empresas internacionales...</p>
+        <ol>
+            <li><strong>Microsoft Inc.</strong></li>
+            <li><strong>International Business Machines (IBM)</strong></li>
+            <li><strong>Oracle Corporation</strong></li>
+            <li><strong>Alphabet Inc. (Google)</strong></li>
+            <li><strong>Adobe Inc.</strong></li>
+        </ol>
     </div>
     <script src="js.js"></script>
 </body>
