modificacion fase beta4

--- a/index.html
+++ b/index.html
@@ -30,14 +30,28 @@
     </div>
     <div id="empresas-internacionales" class="tab-content" style="display: none;">
         <h2>Página de empresas internacionales</h2>
-        <p>Contenido de la página de empresas internacionales...</p>
-        <ol>
-            <li><strong>Microsoft Inc.</strong></li>
-            <li><strong>International Business Machines (IBM)</strong></li>
-            <li><strong>Oracle Corporation</strong></li>
-            <li><strong>Alphabet Inc. (Google)</strong></li>
-            <li><strong>Adobe Inc.</strong></li>
-        </ol>
+        <ul>
+            <li>
+                <strong>Microsoft Inc.</strong><br>
+                Microsoft es una empresa multinacional de tecnología que desarrolla, fabrica, licencia, respalda y vende software, productos electrónicos, computadoras y servicios relacionados. Ofrece una amplia gama de servicios, incluidos sistemas operativos como Windows, aplicaciones de productividad como Office, soluciones de infraestructura en la nube a través de Azure, y hardware como Surface. Además, Microsoft está involucrada en la industria de los videojuegos a través de su consola Xbox.
+            </li>
+            <li>
+                <strong>International Business Machines (IBM)</strong><br>
+                IBM es una empresa de tecnología de la información multinacional que ofrece una amplia gama de servicios y soluciones, incluidos hardware, software, servicios de infraestructura en la nube, servicios de consultoría y servicios de investigación. IBM se enfoca en áreas como la inteligencia artificial, la analítica de datos, la computación cuántica y la ciberseguridad. Además, es conocida por sus sistemas mainframe y su histórico papel en la informática empresarial.
+            </li>
+            <li>
+                <strong>Oracle Corporation</strong><br>
+                Oracle es una empresa multinacional de tecnología especializada en desarrollar y comercializar hardware y software de computación y servicios de ingeniería en la nube y de software. Ofrece una amplia gama de productos y servicios, incluidos sistemas de gestión de bases de datos, aplicaciones empresariales, herramientas de desarrollo, sistemas de hardware y servicios en la nube. Oracle es conocida por sus bases de datos Oracle Database y sus suites de aplicaciones empresariales.
+            </li>
+            <li>
+                <strong>Alphabet Inc. (Google)</strong><br>
+                Alphabet es una empresa matriz multinacional que posee varias subsidiarias, siendo Google la más conocida. Google ofrece una amplia gama de servicios y productos, incluido el motor de búsqueda líder en el mundo, Google Search, el sistema operativo móvil Android, el servicio de correo electrónico Gmail, el navegador web Chrome, entre otros. Además, Alphabet está involucrada en proyectos de investigación y desarrollo en áreas como la inteligencia artificial, la computación en la nube y la salud.
+            </li>
+            <li>
+                <strong>Adobe Inc.</strong><br>
+                Adobe es una empresa multinacional de software de computadora ampliamente conocida por sus productos creativos como Adobe Photoshop, Illustrator, InDesign, Premiere Pro, After Effects y Acrobat. Además de sus productos creativos, Adobe ofrece una gama de soluciones empresariales que incluyen Adobe Creative Cloud para empresas, Adobe Document Cloud y Adobe Experience Cloud, que proporcionan herramientas para la gestión de contenido, el marketing digital y la experiencia del cliente.
+            </li>
+        </ul>
     </div>
     <script src="js.js"></script>
 </body>
