--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </header>
     <div id="inicio" class="tab-content" style="display: none;">
         <h2>Página de inicio</h2>
+        <div class="info-box">
+            <p><strong>Nombre: </strong><span>Rodrigo Josué Monterrosa Jorge</span></p>
+            <p><strong>Código: </strong><span>20220377</span></p>
+        </div>
         <p>Contenido de la página de inicio...</p>
     </div>
     <div id="empresas" class="tab-content" style="display: none;">
