--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página con pestañas</title>
+    <title>Perfil 1 :D</title>
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
@@ -19,7 +19,6 @@
             <p><strong>Nombre: </strong><span>Rodrigo Josué Monterrosa Jorge</span></p>
             <p><strong>Código: </strong><span>20220377</span></p>
         </div>
-        <p>Contenido de la página de inicio...</p>
     </div>
     <div id="empresas" class="tab-content" style="display: none;">
         <h2>Página de empresas</h2>
